# RetroArcher.X

./: .gitignore  CHANGELOG.md  Dockerfile  PlexPy.py  README.md  RetroArcher.py  pyproject.toml  requirements.txt  start.bat  start.sh
.github/: label-actions.yml
.github/workflows/: issues-stale.yml  publish-docker.yml  publish-installers.yml  publish-snap.yml  release_announcement.yml
action_bots/: discord_rel.py  facebook_rel.py  reddit.py  requirements.txt  twitter.py
data/interfaces/default/: app_import.html  base.html  config_import.html  configuration_table.html  edit_library.html  edit_user.html  graphs.html  history.html  index.html  info.html  libraries.html  library.html  library_stats.html  login.html  logs.html  mobile_device_config.html  newsletter_auth.html  newsletter_preview.html  notifier_config.html  recently_added.html  settings.html  shutdown.html  stream_data.html  support.html  sync.html  third_party_table.html  update_metadata.html  user.html  users.html  welcome.html
data/interfaces/default/css/: retroarcher.css
data/interfaces/default/images/favicon/: manifest.json
data/interfaces/default/js/: script.js
data/interfaces/default/js/tables/: cemu_logs.js  (+2 more)
data/interfaces/newsletters/: recently_added.html  recently_added.internal.html
init-scripts/: init.freebsd  init.osx  init.systemd
lib/osxnotify/: registerapp.py
package/: RetroArcher-macos.spec  RetroArcher-windows.spec  RetroArcher.nsi  requirements-macos.txt  requirements-windows.txt
package/macos-scripts/: postinstall  preinstall
plexpy/: __init__.py  activity_handler.py  activity_pinger.py  activity_processor.py  api2.py  classes.py  common.py  config.py  database.py  datafactory.py  datatables.py  devices.py  discord_rpc.py  download_helper.py  emulators.py  exceptions.py  exporter.py  graphs.py  helpers.py  libraries.py  lock.py  log_reader.py  logger.py  macos.py  mobile_app.py  newsletter_handler.py  newsletters.py  notification_handler.py  notifiers.py  platforms.py  plex.py  plexivity_import.py  plextv.py  plexwatch_import.py  pmsconnect.py  request.py  scanner.py  session.py  streamer.py  users.py  (+7 more)
snap/: snapcraft.yaml
